# dikw-plugins

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: architecture.md  plugin-author-guide.md  release-process.md  tool-survey.md
scripts/: check-package.py  extract_changelog.py
tests/packaging/: conftest.py  test_artifacts.py  test_extract_changelog.py
