[project]
name = "dikw-plugins-workspace"
version = "0.0.0"
description = "uv workspace root for dikw-core converter plugins. Not published — install individual packages from ``packages/`` instead."
requires-python = ">=3.12"

# Workspace members. Each package under packages/ has its own
# pyproject.toml and is published independently to pypi.
[tool.uv.workspace]
members = ["packages/*"]

# Note: ``dikw-core`` is resolved from PyPI via each plugin's own
# ``[project.dependencies]`` entry (``dikw-core>=…``). For local dev
# against an unreleased dikw-core, drop ``pip install -e ../dikw-core``
# into the synced env after ``uv sync`` — see CLAUDE.md "Dev workflow".

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
    "mypy>=1.20",
    "twine>=5.0",
]

# Shared tooling config — every package inherits these so style and
# type strictness stay uniform across the workspace.
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["packages"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = ["E501"]  # line length is handled by the formatter

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["SIM117"]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "tests"]
addopts = "-ra -q"
